# httptest

./: .coverage  .dockerignore  .env  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ruff.yml  run-tests.yml
config/: env.py  settings.py
examples/: example_01.py  example_02.py
httptest/: endpoint.py
httptest/endpoints/: endpoint.py  fakerapi.py  httpbin.py  jsonplaceholder.py  postman.py  the_internet.py  zuplo.py
httptest/utils/: validate.py
params/: fakerapi.py  httpbin.py  jsonplaceholder.py  postman.py  the_internet.py  zuplo.py
tests/: conftest.py
tests/test_api/: conftest.py  test_fakerapi.py  test_httpbin.py  test_jsonplaceholder.py  test_postman.py  test_the_internet.py  test_zuplo.py
tests/test_load/: example.py  load_test.py  test_utils.py  utils.py
tests/test_utils/: test_endpoint.py  test_timedif.py  test_validate.py
